# GMDSI_notebooks

./: .gitignore  Dockerfile  Dockerfile.cpu  README.md  app-cpu.json  app-gpu.json  environment.yml  index.md  mkdocs.yml  requirements.txt  run.sh  session_outline.md
dependencies/pyemu/: .gitignore  .readthedocs.yml  CITATION.cff  README.md  mkdocs.yml  pyproject.toml
dependencies/pyemu/.github/workflows/: ci.yml  release.yml
dependencies/pyemu/autotest/: conftest.py  emulator_tests.py  en_tests.py  full_meal_deal_tests_ignore.py  la_tests.py  mat_tests.py  mc_tests_ignore.py  metrics_tests.py  pst_from_tests.py  pst_tests.py  pst_tests_ignore.py  transformer_tests.py  utils_tests.py
dependencies/pyemu/autotest/la/: pest.isen  pest.pst
dependencies/pyemu/autotest/mat/: base_pest.pst  cov_kx.mat  cov_kz.mat  cov_por.mat  param.unc  param_path.unc  parameters.unc
dependencies/pyemu/autotest/misc/: pp.pts  sim_hds_v6.smp
dependencies/pyemu/autotest/newpst/: O_f_piez_FP007.txt  emm_f.txt  emm_m.txt  flux_depression.txt  model_input.txt  model_output.txt  pcf.pst  per_f.txt  per_l.txt  per_m.txt  por_f.txt  por_m.txt  por_m_tied.txt
dependencies/pyemu/autotest/pst/: 10.pst  100_superobs.pst  15.pst  1st_3yr5.pst  20.pst  200_superobs.pst  25.pst  2pptest_cal_prms_mf_final4b_reg_svda1best.pst  3yr_5super_rjh11_meanBEST.pst  5.pst  5best.pst  Ambient_rjh2.pst  AppleP.pst  BR_KC.pst  Col_GFL.pst  Columbia8.pst  ElderPEST.pst  INSET2.pst  LPR_SS11_FINAL_BEST_JACOBIAN.pst  NACP_sensitivity.pst  PF10.pst  allequash_sv45PHIMLIM_NOBS.pst  badriver_3.pst  badriver_old.pst  badriver_pareto2.pst  br_kc2.pst  br_kc_old.pst  br_opt_no_zero_weighted.pst  brstep4.pst  brstep4svd1best.pst  cal_gsflow.pst  cal_prms_mf_final6b_reg.pst  calib1r.pst  calib5.pst  calibrationN.pst  case1a.pst  chip_pp_reg4bal.pst  chip_pp_reg4bal.rei  columbia_fixed_pps.pst  dane9_trans_rjh2_svd1BEST.pst  (+32 more)
dependencies/pyemu/autotest/utils/: TWDB_wells.obs.smp  TWDB_wells.smp  ppoints.faults.csv
dependencies/pyemu/docs/: get_pestpp.md  index.md  new_version_steps.md  requirements.txt
dependencies/pyemu/examples/: MatrixCovariance_demo.ipynb  helpers.py  plot_domain.py  plot_domain_for_note.py  pstfrom_mf6.ipynb  pstfrom_mf6_ppu.ipynb  pstfrom_relaxed.ipynb  understanding_array_thresholding.ipynb
dependencies/pyemu/examples/Freyberg/: freyberg.par  pest_freyberg.py  run.py  start_slaves.py
dependencies/pyemu/examples/Freyberg_Truth/: freyberg.bas  freyberg.dis  freyberg.heads  freyberg.heads_potobs.ins  freyberg.nam  freyberg.rivflux  freyberg.travel  freyberg.truth.rch  freyberg.truth.riv  hk.zones
dependencies/pyemu/examples/freyberg_usg/: freyberg.usg.bas  freyberg.usg.disu  freyberg.usg.ghb  freyberg.usg.gnc  freyberg.usg.lpf  freyberg.usg.nam  freyberg.usg.oc  freyberg.usg.rch  freyberg.usg.sfr  freyberg.usg.sms  freyberg.usg.wel
dependencies/pyemu/examples/henry/: pest.pst  pest.rei
dependencies/pyemu/misc/kriging/: freyberg.dis  freyberg.pcg  freyberg.spc  freyberg_pp.nam  ppk2fac.in  settings.fig
dependencies/pyemu/pyemu/: __init__.py  _version.py  eds.py  en.py  logger.py
dependencies/pyemu/pyemu.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dependencies/pyemu/pyemu/emulators/: __init__.py  base.py  (+6 more)
(+16658 files in other folders)
