[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "pyemu"
version = "1.5.0rc2"
authors = [
    { name = "Jeremy White", email = "jtwhite1000@gmail.com" },
    { name = "Mike Fienen", email = "mnfienen@usgs.gov" },
    { name = "Brioch Hemmings", email = "bhemmings@intera.com" },
]
description = "pyEMU is a set of python modules for interfacing with PEST and PEST++"
readme = "README.md"
keywords = ["pest", "pestpp"]
license = "BSD-3-Clause"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.10"
dependencies = [
    # some messyness to try and avoid some blas versions
    "numpy>2.3.4 ; python_full_version >= '3.14' and sys_platform=='linux'",
    "numpy>=2.2.6,<2.3.2 ; python_full_version < '3.14' and sys_platform=='linux'",
    "numpy>=2.2.6 ; sys_platform!='linux'",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
optional = [
    "flopy>=3.9.5",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.7",
    "pypestutils>=0.3.0",
    "pyshp>=3.0.2.post1",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "shapely>=2.1.2",
]

tests = [
    "flaky>=3.8.1",
    "modflow-devtools>=1.8.0",
    "nbval>=0.11.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-autoapi>=0.4.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings-python>=2.0.1",
    "pyemu[optional]",
]
tf = [
    "tensorflow>=2.20.0 ; python_full_version < '3.14'",
]

[dependency-groups]
dev = [
    "flaky>=3.8.1",
    "flopy>=3.9.5",
    "jinja2>=3.1.6",
    "jupyterlab>=4.4.10",
    "matplotlib>=3.10.7",
    "modflow-devtools>=1.8.0",
    "nbval>=0.11.0",
    "pypestutils>=0.3.0",
    "pyshp>=3.0.2.post1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "shapely>=2.1.2",
    "tensorflow>=2.20.0 ; python_full_version < '3.14'",
]

[project.scripts]
get-pestpp = "pyemu.utils.get_pestpp:cli_main"

[project.urls]
documentation = "https://pyemu.readthedocs.io/"
repository = "https://github.com/pypest/pyemu"

[tool.uv.build-backend]
module-name = "pyemu"
module-root = ""

[tool.uv.sources]
pyemu = { workspace = true }

[tool.pytest.ini_options]
testpaths = [
    "autotest",
]
addopts = "--cov-config=pyproject.toml"

python_functions = [
    "*_test",
    "test_*"
]
norecursedirs = '*'
python_files = "*_tests.py"

[tool.coverage.run]
source = ["pyemu"]
parallel = true
relative_files = true
patch = ["subprocess"]
omit = [
    "*/legacy/*"
    ]

[tool.codespell]
check-filenames = true
#skip = "*.grb,*.pdf,./dependencies"
skip = "*.fpr,*.grb,*.pdf,*.pfm,*.pst,*.tex,*.list,*.rec,./docs/_build,./codespell.ignore"
ignore-regex = "[A-Za-z0-9+/\\\\]{100,}"  # base64-encoded data in *.ipynb files
ignore-words-list = [
    "afile",
    "coo",
    "fo",
    "fpr",
    "dum",
    "ect",
    "ons",
    "oen",
    "nam",
    "ptd",
    "delt",
    "parin",
    "gage",
    "wel",
]
